[package]
name = "keep_my_jcloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "serde_json"] }
regex = "1"
lazy_static = "1.4.0"
clap = { version = "3.2", features = ["derive"] }
url = "2.3"
log = "0.4.17"
env_logger = "0.9.1"