[package]
name = "keep_my_jcloud"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "serde_json"] }
regex = "1"
lazy_static = "1.4.0"
clap = { version = "4.0.17", features = ["derive"] }
url = "2.3"
log = "0.4.17"
env_logger = "0.9.1"
rocket-cache-response = "0.6.2"